# notebooks

./: .gitignore  LICENSE  README.md  personal-assistant-llama-index.ipynb  pyproject.toml  qa-llamaindex-gpt4all.ipynb
nn/: batchnorm.ipynb  bigrams.ipynb  mlp.ipynb
