[tool.poetry]
name = "fun"
version = "0.1.0"
description = ""
authors = ["Chaipat Suwannapoom <bchaipats@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^4.1.5"
langchain = "0.1.9"
gpt4all = "2.2.1"
llama-index = "0.10.13"
llama-index-embeddings-langchain = "0.1.2"
llama-index-llms-langchain = "0.1.3"
sentence-transformers = "2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
